--- a/src/app/i18n/translations/es-ES.json
+++ b/src/app/i18n/translations/es-ES.json
@@ -41,6 +41,7 @@
     "downloadJson": "Descargar JSON",
     "viewJsonTree": "Ver modo árbol",
     "viewJsonText": "Volver al editor",
+    "jsonViewModeToggle": "Modo de visualización del JSON",
     "downloadPdf": "Descargar PDF",
     "toolbarAriaLabel": "Acciones del PDF",
     "navigationGroup": "Navegación de páginas",
