feat: add page thumbnails sidebar

--- a/src/app/i18n/translations/ca.json
+++ b/src/app/i18n/translations/ca.json
@@ -67,6 +67,10 @@
       "deleteButton": "Elimina",
       "empty": "Encara no tens cap plantilla desada."
     },
+    "thumbnails": {
+      "title": "Miniatures",
+      "pageLabel": "Pàgina {{index}}"
+    },
     "jsonHint": "Enganxa les coordenades o importa-les des d'un fitxer JSON amb el mateix format que l'exportat.",
     "advancedTitle": "Opcions avançades",
     "advancedHint": "Activa les guies i el snapping només quan necessitis més precisió."
