feat: support locked and hidden annotation fields

--- a/src/app/i18n/translations/ca.json
+++ b/src/app/i18n/translations/ca.json
@@ -136,12 +136,17 @@
       },
       "value": {
         "label": "Valor fix",
-        "placeholder": "Valor opcional..."
-      },
-      "number": {
-        "decimals": {
-          "label": "Decimals"
-        },
+    "placeholder": "Valor opcional..."
+  },
+  "behavior": {
+    "label": "Comportament",
+    "hidden": "Amaga al llenç",
+    "locked": "Bloqueja l'anotació"
+  },
+  "number": {
+    "decimals": {
+      "label": "Decimals"
+    },
         "appender": {
           "label": "Sufix",
           "placeholder": "Ex.: %"
