Add lock and hide controls for workspace annotations

--- a/src/app/i18n/translations/ca.json
+++ b/src/app/i18n/translations/ca.json
@@ -150,6 +150,14 @@
           "label": "Sufix",
           "placeholder": "Ex.: %"
         }
+      },
+      "locked": {
+        "label": "Bloqueja l'anotació",
+        "toggle": "Evita canvis i arrossegaments"
+      },
+      "hidden": {
+        "label": "Oculta l'anotació",
+        "toggle": "No mostrar en exportacions"
       }
     },
     "color": {
