--- a/src/app/i18n/translations/es-ES.json
+++ b/src/app/i18n/translations/es-ES.json
@@ -6,7 +6,11 @@
     "languages": {
       "es-ES": "Español",
       "en": "Inglés",
-      "ca": "Catalán"
+      "ca": "Catalán",
+      "fr": "Francés",
+      "it": "Italiano",
+      "pt": "Portugués",
+      "de": "Alemán"
     },
     "landing": {
       "badge": "Empieza a anotar",
